# inspira

./: .flake8  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  pyblaze.yml  tests.yml
inspira/: __init__.py  config.py  constants.py  enums.py  globals.py  inspira.py  logging.py  requests.py  responses.py  sessions.py  testclient.py
inspira/auth/: auth_utils.py  utils.py
inspira/auth/decorators/: __init__.py  login_required.py
inspira/auth/mixins/: user_mixin.py
inspira/cli/: cli.py  create_app.py  create_controller.py  generate_database_file.py  generate_model_file.py  generate_repository_file.py  generate_service_file.py  init_file.py  utils.py
inspira/cli/templates/: app_template.txt  controller_template.jinja2  controller_template.txt  database_template.txt  model_template.jinja2  repository_template.jinja2  repository_template.txt  service_template.txt  websocket_controller_template.txt
inspira/decorators/: http_methods.py  path.py  websocket.py
inspira/helpers/: error_handlers.py  error_templates.py  static_file_handler.py
inspira/middlewares/: cors.py  sessions.py  user_loader.py
inspira/migrations/: migrations.py  utils.py
inspira/utils/: __init__.py  dependency_resolver.py  handler_invoker.py  inflection.py  naming.py  param_converter.py  session_utils.py
inspira/websockets/: __init__.py  handle_websocket.py  websocket.py  websocket_controller_registry.py
pyblaze/: __init__.py  config.py  constants.py  enums.py  helpers.py  pyblaze.py  requests.py  responses.py  sessions.py  utils.py  websockets.py
pyblaze/cli/: cli.py  create_app.py  create_controller.py  generate_database_file.py  generate_model_file.py  generate_repository_file.py  generate_service_file.py
pyblaze/cli/templates/: app_template.txt  controller_template.txt  database_template.txt  repository_template.txt  service_template.txt  websocket_controller_template.txt
pyblaze/decorators/: http_methods.py  path.py  websocket.py
pyblaze/helpers/: error_handlers.py  error_templates.py  static_file_handler.py
pyblaze/utils/: __init__.py  controller_parser.py  dependency_resolver.py  handler_invoker.py  inflection.py  naming.py  secret_key.py
pyblaze/websockets/: __init__.py  handle_websocket.py  websocket.py  websocket_controller_registry.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_dependency_resolver.py  test_globals.py  test_helpers.py  test_inspira.py  test_logging.py  test_middleware.py  test_migrations.py  test_path_decorator.py  test_pyblaze.py  test_requests.py  test_responses.py  test_session_utils.py  test_sessions.py  test_utils.py  test_websockets.py
tests/templates/: example.html
