[project]
name = "pyblaze"

description = "PyBlaze is a lightweight framework for building asynchronous web applications."
authors = [{name = "Hayri Cicek", email = "hayri@pyblaze.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]

requires-python = ">=3.8"

dependencies = [
    "Jinja2>=3.1.2",
    "click>=8.1.7",
    "uvicorn",
    "httpx",
    "sqlalchemy",
    "bcrypt",
    "inflect",
    "sqlalchemy-utils",
    "websockets"
]

dynamic = ["version"]

[project.scripts]
pyblaze = "pyblaze.cli.cli:cli"

[project.urls]
Home = "https://pyblaze.com"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"