[project]
name = "inspira"
version = "0.12.0"
description = "Inspira is a lightweight framework for building asynchronous web applications."
readme = "README.md"
authors = [{name = "Hayri Cicek", email = "hayri@inspiraframework.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

requires-python = ">=3.8"

dependencies = [
    "Jinja2>=3.1.2",
    "click>=8.1.7",
    "uvicorn",
    "httpx",
    "sqlalchemy",
    "bcrypt",
    "inflect",
    "sqlalchemy-utils",
    "websockets",
    "PyJWT",
    "itsdangerous",
]

[project.scripts]
inspira = "inspira.cli.cli:cli"

[project.urls]
Homepage = "https://inspiraframework.com"
Repository = "https://github.com/cicekhayri/inspira"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"